@@ -1,0 +1,5 @@
+package Uninit_Array is
+
+  function F2 return Integer;
+
+end Uninit_Array;
