@@ -1,3 +1,8 @@
+2013-10-13  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/uninit_array.ad[sn]: New test.
+	* gnat.dg/uninit_array_pkg.ads: New helper.
+
 2013-10-13  Richard Biener  <rguenther@suse.de>
 
 	* gcc.c-torture/execute/pr58662.c: New test.
