@@ -1,3 +1,8 @@
+2013-10-13  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc-interface/decl.c (gnat_to_gnu_entity) <object>: Force all local
+	variables with aggregate types in memory if not optimizing.
+
 2013-10-13  Hristian Kirtchev  <kirtchev@adacore.com>
 
 	* sem_prag.adb (Check_Mode): Do
